--- a/.github/worflows/firebase-hosting-pull-request.yml
+++ b/.github/worflows/firebase-hosting-pull-request.yml
@@ -2,10 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-'on':
-  push:
-    branches:
-      - main
+'on': pull_request
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -15,7 +12,6 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATACLOUDER_DEMO_GIT_ACTIONS }}'
-          channelId: live
           projectId: prueba3
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
