--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,19 +3,15 @@
 
 name: Deploy to Firebase Hosting on merge
 'on': pull_request
-  push:
-    branches:
-      - main
-    jobs:
-      build_and_deploy:
-        runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v2
-          - uses: FirebaseExtended/action-hosting-deploy@v0
-            with:
-              repoToken: '${{ secrets.GITHUB_TOKEN }}'
-              firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATACLOUDER_DEMO_GIT_ACTIONS }}'
-              channelId: live
-              projectId: prueba3
-            env:
-              FIREBASE_CLI_PREVIEWS: hostingchannels
+jobs:
+  build_and_preview:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATACLOUDER_DEMO_GIT_ACTIONS }}'
+          projectId: prueba3
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
